--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'maven'
  
-group = 'com.haulmont.cuba'
+group = 'com.haulmont.cuba-resources'
 
 version = '1.0.0'
  
